# firefly-types

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
src/: badges.rs  boards.rs  encode.rs  lib.rs  manuals.rs  meta.rs  serial.rs  settings.rs  spi.rs  stats.rs  validators.rs  wifi.rs
