[package]
name = "firefly-types"
version = "0.1.2"
edition = "2021"
authors = ["Firefly Zero team"]
description = "Parser and serializer for the Firefly Zero metadata file format"
homepage = "https://fireflyzero.com/"
repository = "https://github.com/firefly-zero/firefly-types"
license = "MIT"
keywords = ["gamedev", "serialization", "serde", "firefly-zero"]
categories = ["encoding", "game-development", "no-std", "parsing", "wasm"]

[dependencies]
# serialization format designed for no-std embedded systems
postcard = { version = "1.0.8", default-features = false }
# data serialization framework
serde = { version = "1.0.197", default-features = false }
