[package]
name = "firefly-types"
version = "0.4.0"
rust-version = "1.82.0"
edition = "2021"
authors = ["Firefly Zero team"]
description = "Parser and serializer for the Firefly Zero metadata file format"
homepage = "https://fireflyzero.com/"
repository = "https://github.com/firefly-zero/firefly-types"
license = "MIT"
keywords = ["gamedev", "serialization", "serde", "firefly-zero"]
categories = ["encoding", "game-development", "no-std", "parsing", "wasm"]

[dependencies]
# serialization format designed for no-std embedded systems
postcard = { version = "1.0.10", default-features = false, features = [
    "alloc",
] }
# data serialization framework
serde = { version = "1.0.215", default-features = false, features = ["alloc"] }
